Finalize Saving BMP as Black and White
- fix saving to file (speed up)
- prepare simple function for color quantization

--- a/ImageProcessTests/ImageProcessTests.vcxproj
+++ b/ImageProcessTests/ImageProcessTests.vcxproj
@@ -127,7 +127,7 @@
     <ClCompile Include="Image.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Image.h" />
+    <ClInclude Include="Image.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
